Revision history for Perl module TestRail::API

0.028 2015-06-15 TEODESIAN
    - Hotfix: forgot to include a module in the prove plugin.  How did this pass compile.t? A mystery.

0.027 2015-06-14 TEODESIAN
    - If no tests are run (environment fail), set test status to 'retest' on non case-per-ok tests
    - If the only oddities in a test are passing TODO tests, mark entire run as TODO PASS.
    - Fix issue where having a ~/.testrailrc would prevent make test from allowing install by cpan client
    - Fix issue where specifying sections past the first defined in a project would fail to restrict spawning to said sections
    - Add Plan Summarizer function
    - Always append the full raw TAP to all results
    - Add closePlan and closeRun functions to TestRail::API
    - Add option to binaries, plugin to close plan/run if no untested/retest exist at end of TAP parse

0.026 2015-06-06 TEODESIAN
    - Add --no-match option to testrail-tests to find orphan tests in a tree
    - Upload full raw results to TestRail when not in step_results or case_per_ok mode
    - Add ability to pass section IDs to discriminate when spawning runs in Test::Rail::Parser
    - Add ability to pass section names to App::Prove::Plugin::TestRail and testrail-report when spawning runs.
    - Add sectionNamesToIds convenience method to TestRail::API

0.025 2015-05-21 TEODESIAN
    - Fix test failures on windows (and an issue in testrail-tests on win32)
    - Fix issue where testrail-tests was unresponsive to --help
    - Fix issue where getChildRuns would not return all child runs.

0.024 2015-05-17 TEODESIAN
    - Allow spawning of plans in Test::Rail::Parser (and those programs depending on it)
    - Fix issue where step_results were not uploaded correctly.

0.023 2015-05-13 TEODESIAN
    - Fix issue where spawning runs in plans with configurations failed.

0.022 2015-05-08 TEODESIAN
    - Fix issue where testrail-tests always attempted to turn test names into paths
