@@ -57,6 +57,48 @@ sub parseConfig {
     return $results;
 }
 
+=head2 getFilenameFromTAPLine($line)
+
+Analyze TAP output by prove and look for filename boundaries (no other way to figure out what file is run).
+Long story short: don't end 'unknown' TAP lines with any number of dots if you don't want it interpreted as a test name.
+Apparently this is the TAP way of specifying the file that's run...which is highly inadequate.
+
+Inputs:
+
+STRING LINE - some line of TAP
+
+Returns:
+
+STRING filename of the test that output the TAP.
+
+=cut
+
+sub getFilenameFromTapLine {
+    my $orig = shift;
+
+    $orig =~ s/ *$//g; # Strip all trailing whitespace
+
+    #Special case
+    my ($is_skipall) = $orig =~ /(.*)\.+ skipped:/;
+    return $is_skipall if $is_skipall;
+
+    my @process_split = split(/ /,$orig);
+    return 0 unless scalar(@process_split);
+    my $dotty = pop @process_split; #remove the ........ (may repeat a number of times)
+    return 0 if $dotty =~ /\d/; #Apparently looking for literal dots returns numbers too. who knew?
+    chomp $dotty;
+    my $line = join(' ',@process_split);
+    
+    #IF it ends in a bunch of dots
+    #AND it isn't an ok/not ok
+    #AND it isn't a comment
+    #AND it isn't blank
+    #THEN it's a test name
+
+    return $line if ($dotty =~ /^\.+$/ && !($line =~ /^ok|not ok/) && !($line =~ /^# /) && $line);
+    return 0;
+}
+
 1;
 
 __END__
