@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-use Test::More 'tests' => 8;
+use Test::More 'tests' => 10;
 use Test::Fatal;
 use TestRail::Utils;
 use File::Basename qw{dirname};
@@ -19,6 +19,38 @@ is(exception {$out = TestRail::Utils::parseConfig(dirname(__FILE__))}, undef, "N
 is($out->{apiurl},'http://hokum.bogus',"APIURL parse OK");
 is($out->{user},'zippy',"USER parse OK");
 is($out->{password}, 'happy', 'PASSWORD parse OK');
+
+#Handle both the case where we do in sequence or in paralell and mash together logs
+
+my @files;
+my $fcontents = '';
+open(my $fh,'<','t/test_multiple_files.tap') or die("couldn't open our own test files!!!");
+while (<$fh>) {
+    if (TestRail::Utils::getFilenameFromTapLine($_)) {
+        push(@files,$fcontents) if $fcontents;
+        $fcontents = '';
+    }
+    $fcontents .= $_;
+}
+close($fh);
+push(@files,$fcontents);
+diag explain \@files;
+is(scalar(@files),2,"Detects # of filenames correctly in TAP");
+
+$fcontents = '';
+@files = ();
+open($fh,'<','t/seq_multiple_files.tap') or die("couldn't open our own test files!!!");
+while (<$fh>) {
+    if (TestRail::Utils::getFilenameFromTapLine($_)) {
+        push(@files,$fcontents) if $fcontents;
+        $fcontents = '';
+    }
+    $fcontents .= $_;
+}
+close($fh);
+push(@files,$fcontents);
+diag explain \@files;
+is(scalar(@files),7,"Detects # of filenames correctly in TAP");
 
 
 #Regrettably, I have yet to find a way to print to stdin without eval, so userInput will remain untested.
