@@ -16,7 +16,7 @@ test.t (Wstat: 256 Tests: 2 Failed: 1)
     Files=1, Tests=2,  0 wallclock secs ( 0.02 usr  0.00 sys +  0.01 cusr  0.00 csys =  0.03 CPU)
     Result: FAIL
 
-STROGGIFY POPULATION CENTERS ..
+STROGGIFY POPULATION CENTERS ......
 ok 1 - STROGGIFY POPULATION CENTERS
 not ok 2 - STROGGIFY POPULATION CENTERS
 
